# youtube_to_text

./: .gitignore  LICENSE  README.md  chunk_audio.py  download.py  format_transcript.py  pyproject.toml  todo.md  transcribe.py  ytt.py  ytt_transcript.py
src/: chunk_audio.py  download.py  format_transcript.py  transcribe.py
tests/: segments.py  test_download.py  test_format_transcript.py  test_transcribe.py  test_ytt.py
