[project]
name = "youtube-to-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "loguru>=0.7.2",
    "openai-whisper>=20240930",
    "pydub>=0.25.1",
    "pytube>=15.0.0",
    "yt-dlp>=2024.11.4",
]
